# adk-python

.kiro/specs/collaborative-novelist-assistant/: design.md  requirements.md  tasks.md
ai-novel-editor/: .env.example  AI_FEATURES.md  AI_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  AUDIO_FEATURES.md  CHECKLIST.md  COMPLETE_AUDIO_SUMMARY.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  FIX_AUDIO_ERROR.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MICROPHONE_RECORDING.md  MINDMAP_FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_AUDIO.md  README.md  REQUIREMENTS_ANALYSIS.md  REQUIREMENTS_GUIDE.md  REQUIREMENTS_SUMMARY.md  SETUP_SUMMARY.md  STORAGE_IMPLEMENTATION.md  TASK_14_VERIFICATION.md  TASK_16_ERROR_HANDLING_ENHANCEMENTS.md  TROUBLESHOOTING_TRANSCRIPTION.md  UNIVERSAL_AUDIO.md  UPDATE_INSTRUCTIONS.md  VOICE_AND_UI_FEATURES.md  app.py  diagnose.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_audio.py  test_microphone.py  test_mindmap.py  test_truth_viewers.py  test_universal_audio.py  (+1 more)
ai-novel-editor/data/projects/examples/fantasy-quest/: project.backup.json
ai-novel-editor/data/projects/examples/space-odyssey/: project.json
ai-novel-editor/data/projects/proj_1760888392.357951/: project.json
ai-novel-editor/data/projects/proj_1760889995.47798/: project.json
ai-novel-editor/data/projects/proj_1760897919.833396/: project.json
ai-novel-editor/data/projects/proj_1760898535.649204/: project.json
ai-novel-editor/data/projects/proj_1760899637.008111/: project.json
ai-novel-editor/data/projects/proj_1760900002.154775/: project.json
ai-novel-editor/data/projects/proj_1760900149.937856/: project.json
ai-novel-editor/data/projects/proj_1761242441.168614/: project.json
ai-novel-editor/src/: __init__.py  config.py
ai-novel-editor/src/agents/: __init__.py  base.py  editing_agent.py  worldbuilding_agent.py
ai-novel-editor/src/models/: __init__.py  project.py  truth.py
ai-novel-editor/src/services/: __init__.py  audio_service.py  base.py  llm_service.py  project_manager.py  storage.py  voice_service.py
ai-novel-editor/src/ui/: README.md  __init__.py  audio_input.py  mindmap.py  truth_editors.py  truth_viewers.py
ai-novel-editor/tests/: __init__.py  test_audio_input.py  test_audio_service.py  test_editing_agent.py  test_llm_service.py  test_models.py  test_project_manager.py  test_setup.py  test_storage.py
data/projects/examples/fantasy-quest/: project.json
data/projects/examples/space-odyssey/: project.backup.json  project.json
