[project]
name = "ai-novel-editor"
version = "0.1.0"
description = "AI-assisted novel writing editor with interactive world-building"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "streamlit-agraph>=0.0.45",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
